# GStreamerCppHelpers

./: .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
GstPtr/: README.md  gst_ptr.h
GstPtr/test/: CMakeLists.txt  test_gst_ptr.cpp
cmake/: clang-tools.cmake  conan-tools.cmake  pre-commit.cmake  settings.cmake  unit-tests.cmake
conan_recipe/: conandata.yml  conanfile.py
conan_recipe/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
